@@ -17,7 +17,13 @@
 			image="konrad-lord-bow-defend.png"
 		[/frame]
 	[/defend]
-	image_leading="konrad-lord-leading.png"
+	[leading_anim]
+		[frame]
+			begin=-150
+			end=150
+			image="konrad-lord-leading.png"
+		[/frame]
+	[/leading_anim]
 	profile=portraits/konrad.png
 	hitpoints=68
 	[abilities]
@@ -169,7 +175,13 @@
 				image="konrad-lord-defend.png"
 			[/frame]
 		[/defend]
-		image_leading="konrad-lord-leading.png"
+		[leading_anim]
+			[frame]
+				begin=-150
+				end=150
+				image="konrad-lord-leading.png"
+			[/frame]
+		[/leading_anim]
 		profile=portraits/konrad.png
 		hitpoints=68
 		[abilities]
