@@ -3,7 +3,13 @@
 	name= _ "Drake Flameheart"
 	race=drake
 	image="units/drakes/flameheart.png"
-	image_leading="units/drakes/flameheart-lead.png"
+	[leading_anim]
+		[frame]
+			begin=-150
+			end=150
+			image="units/drakes/flameheart-lead.png"
+		[/frame]
+	[/leading_anim]
 	profile="portraits/core/Alex_Jarocha-Ernst/drake-burner.png"
 	hitpoints=72
 	movement_type=drakefly
