@@ -3,7 +3,13 @@
 	name= _ "Drake Flare"
 	race=drake
 	image="units/drakes/flare.png"
-	image_leading="units/drakes/flare-lead.png"
+	[leading_anim]
+		[frame]
+			begin=-150
+			end=150
+			image="units/drakes/flare-lead.png"
+		[/frame]
+	[/leading_anim]
 	profile="portraits/core/Alex_Jarocha-Ernst/drake-burner.png"
 	hitpoints=54
 	movement_type=drakefly
