@@ -4,7 +4,13 @@
 	race=elf
 	image="units/elves-wood/captain.png"
 	image_long="units/elves-wood/captain-bow.png"
-	image_leading="units/elves-wood/captain-leading.png"
+	[leading_anim]
+		[frame]
+			begin=-150
+			end=150
+			image="units/elves-wood/captain-leading.png"
+		[/frame]
+	[/leading_anim]
 	flag_rgb=230,0,64,138,0,35,72,0,6,60,20,4,255,91,156,196,68,4,132,28,4
 	hitpoints=47
 	movement_type=woodland
