@@ -4,7 +4,13 @@
 	race=elf
 	image="units/elves-wood/marshal.png"
 	image_long="units/elves-wood/marshal-bow.png"
-	image_leading="units/elves-wood/marshal-leading.png"
+	[leading_anim]
+		[frame]
+			begin=-150
+			end=150
+			image="units/elves-wood/marshal-leading.png"
+		[/frame]
+	[/leading_anim]
 	flag_rgb=16,24,57,24,57,115,49,99,181,115,173,231,181,222,255
 	hitpoints=62
 	movement_type=woodland
