@@ -3,7 +3,13 @@
 	name= _ "Goblin Rouser"
 	race=goblin
 	image=units/goblins/rouser.png
-	image_leading=units/goblins/rouser-leading.png
+	[leading_anim]
+		[frame]
+			begin=-150
+			end=150
+			image=units/goblins/rouser-leading.png
+		[/frame]
+	[/leading_anim]
 	hitpoints=26
 	movement_type=orcishfoot
 	movement=4
