@@ -3,7 +3,13 @@
 	name= _ "Grand Marshal"
 	race=human
 	image="units/human-loyalists/marshal.png"
-	image_leading="units/human-loyalists/marshal-leading.png"
+	[leading_anim]
+		[frame]
+			begin=-150
+			end=150
+			image="units/human-loyalists/marshal-leading.png"
+		[/frame]
+	[/leading_anim]
 #ifdef CAMPAIGN_EASTERN_INVASION
 	profile=portraits/gweddry.png
 #endif
