@@ -3,7 +3,13 @@
 	name= _ "Death Knight"
 	race=undead
 	image="units/undead-skeletal/deathknight.png"
-	image_leading="units/undead-skeletal/deathknight-leading.png"
+	[leading_anim]
+		[frame]
+			begin=-150
+			end=150
+			image="units/undead-skeletal/deathknight-leading.png"
+		[/frame]
+	[/leading_anim]
 	{MAGENTA_IS_THE_TEAM_COLOR}
 	hitpoints=66
 	movement_type=undeadfoot
