@@ -284,6 +284,8 @@ private:
 	std::vector<movement_animation> movement_animations_;
 
 	std::vector<standing_animation> standing_animations_;
+
+	std::vector<leading_animation> leading_animations_;
     std::vector<Uint32> flag_rgb_;
 };
 
