@@ -12,6 +12,8 @@ Trunk (1.1.3+svn):
      description for Illuminate in Help.
  * WML engine
    * modify ranged animation timing, all animations (attack, defend, missile
+   * leading_image is deprecated please use the new [leading_anim] animation
+   block
    have the same clock)
  * multiplayer maps:
    * revised multiplayer maps: Charge
